--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -497,7 +497,7 @@ h1,
 .connectionForm
 {
 	max-width:50%;
-	min-width: 100%;
+	min-width: 280px;
 	margin-bottom: 10%;
 	input:focus{
 		border-color: $secondary-color !important;
