[mod/templates] gave a title to every single admin section

--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -1,5 +1,9 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
+
     {{ include('admin/adminNav.html.twig') }}
+
+    <h1> CLIMATE STORIES BANK ADMINISTRATION AREA </h1>
+
 {% endblock %}
