--- a/templates/admin/adminPatronage.html.twig
+++ b/templates/admin/adminPatronage.html.twig
@@ -4,6 +4,8 @@
 
     {{ include('admin/adminNav.html.twig') }}
 
+    <h1>PATRONAGES</h1>
+
     <div class="container-fluid adminList">
         <table class="table">
             <thead>
