--- a/templates/admin/adminUser.html.twig
+++ b/templates/admin/adminUser.html.twig
@@ -1,6 +1,10 @@
 {% extends "base.html.twig" %}
 {% block body %}
+
     {{ include('admin/adminNav.html.twig') }}
+
+    <h1>USERS</h1>
+
     <div class="container-fluid adminList">
         <table class="table">
             <thead>
