[mod/template] adjustement to stick to the updated "modal.js" script

--- a/templates/admin/adminTopic.html.twig
+++ b/templates/admin/adminTopic.html.twig
@@ -30,7 +30,7 @@
                 <td>
                     {{ topic.id }}
                 </td>
-                <td>
+                <td id={{ 'entityType'~topic.id }}>
                     {{ topic.type }}
                 </td>
                 <td>
