[mod/template] change date format from "m/d/Y" to "d/m/Y"

--- a/templates/admin/adminStory.html.twig
+++ b/templates/admin/adminStory.html.twig
@@ -55,7 +55,7 @@
                     </a>
                 </td>
                 <td>
-                    {{ story.createdOn|date("m/d/y") }}
+                    {{ story.createdOn|date("d/m/y") }}
                 </td>
                 <td>
                     <i class="{{ story.validated|stateIcon }}" aria-hidden="true"></i>
