--- a/templates/admin/adminStoryData.html.twig
+++ b/templates/admin/adminStoryData.html.twig
@@ -14,7 +14,7 @@
         </li>
         <li>
             <i class="fa fa-calendar" aria-hidden="true"></i>
-            {{ story.createdOn|date("m/d/Y") }}
+            {{ story.createdOn|date("d/m/Y") }}
         </li>
         <li>
             <i class="fa fa-user" aria-hidden="true"></i>
