--- a/templates/admin/adminUserData.html.twig
+++ b/templates/admin/adminUserData.html.twig
@@ -10,7 +10,7 @@
         <ul class="list-inline">
             <li>
                 <i class="fa fa-calendar" aria-hidden="true"></i>
-                    {{ user.registeredOn|date("m/d/Y") }}
+                    {{ user.registeredOn|date("d/m/Y") }}
             </li>
             <li>
                  <i class="fa fa-envelope" aria-hidden="true"></i>
