--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -35,6 +35,38 @@
             Delete all unactivated accounts
         </a>
 
-    </div>
+        <div class="trigger">
+            <button class="btn btn-primary">Modify administrator login information</button>
+        </div>
 
+    </div>
+    <div class="modalForm"  style="display: none">
+        <i class="fa fa-times closeModal"></i>
+        {{ form_start(form ,{'attr':{'id':'updateAdministrator'}}) }}
+        <div class="form-group row">
+            {{ form_label(form.email) }}
+            {{ form_widget(form.email ,{'attr':{'class':'form-control'}}) }}
+            {{ form_errors(form.email) }}
+        </div>
+        <div class="form-group row">
+            {{ form_label(form.pswd) }}
+            {{ form_widget(form.pswd ,{'attr':{'class':'form-control'}}) }}
+            {{ form_errors(form.pswd) }}
+        </div>
+        <div class="form-group row">
+            {{ form_label(form.confirmPswd) }}
+            {{ form_widget(form.confirmPswd ,{'attr':{'class':'form-control'}}) }}
+            {{ form_errors(form.confirmPswd) }}
+        </div>
+        <div class="form-group row">
+            <button class="btn btn-success" type="submit">Submit</button>
+        </div>
+        {{ form_end(form) }}
+    </div>
+    <div class="modalOverlay" style="display: none"></div>
+
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/modal.js') }}"></script>
 {% endblock %}
