--- a/templates/connectionForms.html.twig
+++ b/templates/connectionForms.html.twig
@@ -18,6 +18,7 @@
                     <label for="password">Password</label>
                     <input class="form-control" type="password" id="password" name="_password"/>
                     <span id="invalid_pswd" style="display: none">Pasword doesn't match prerequisite pattern</span>
+                    <a id="lost" href="{{ path('lostPassword') }}" class="pull-right">Forgotten password ?</a>
                 </div>
                 <div class="form-group row col-md-12">
                     <input type="checkbox" id="remember_me" name="_remember_me" checked />
@@ -25,7 +26,7 @@
                 </div>
                 <div class="form-group row col-md-12" id="registerOptions">
                     <button class="btn btn-success" id="loginBtn" type="submit">Submit</button>
-                    <a class="btn btn-default lost" href="{{ path('lostPassword') }}">Lost Password</a>
+
                 </div>
             </form>
         </div>
