--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -30,7 +30,7 @@
     <div id="announcement">
         <p class ="h2-like">Here's a selection of the last published one</p>
     </div>
-    <div class="homeStories">
+    <div class="container-fluid homeStories">
         {{ include('storyCard.html.twig') }}
     </div>
 
