--- a/templates/storyCard.html.twig
+++ b/templates/storyCard.html.twig
@@ -1,7 +1,7 @@
 {% block body %}
     <div class="cardHolder">
     {% for story in stories %}
-        <div class="storyCard">
+        <div class="storyCard" id="card{{ loop.index }}">
             <div class="cardHeader">
                 <h3>{{ story.title }}</h3>
             </div>
