[mod/template|js] update js script source

--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -68,5 +68,5 @@
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('js/modal.js') }}"></script>
+    <script src="{{ asset('js/modalForm.js') }}"></script>
 {% endblock %}
