--- a/templates/admin/adminTopic.html.twig
+++ b/templates/admin/adminTopic.html.twig
@@ -79,5 +79,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('js/modal.js') }}"></script>
+    <script src="{{ asset('js/modalForm.js') }}"></script>
 {% endblock %}
