--- a/templates/story.html.twig
+++ b/templates/story.html.twig
@@ -15,6 +15,9 @@
                 <div id="plotText">
                     <p>{{ story.plot|raw }}</p>
                 </div>
+                <div class="trigger">
+                    <i class="fa fa-link pull-right" aria-hidden="true"> External links</i>
+                </div>
             </div>
         </div>
     </div>
@@ -40,7 +43,18 @@
             </ul>
     </div>
 
-
+    <div class="modalUrl" style="display: none">
+        <i class="fa fa-times fa-lg closeModal"></i>
+        <p><span>Story #{{ story.id }}</span> external links</p>
+        <ul class="list-unstyled">
+            {% for url in story.urls %}
+            <li>
+                <a href="{{ url.href }}">{{ url.alt }}<i class="fa fa-external-link"></i></a>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="modalOverlay" style="display: none"></div>
 
     <div id="moreContainer">
         {% if sameTopic != null %}
@@ -87,5 +101,9 @@
             </a>
         {% endif %}
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('js/modal.js') }}"></script>
 {% endblock %}
 
